<resources>
    <string name="app_name">StudyWithMe</string>
    <!-- Create room fragment -->
    <string name="room_title">Math room</string>
    <string name="search">Search</string>
    <string name="newFloat">New</string>
    <string name="room_description">Math study room. Lorem ipsum tadalala ulala</string>
    <string name="room_theme">Math</string>
    <string name="fragment_rooms_title">ROOMS</string>
    <string name="filter">Filter</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_room_room_name_text_field_hint">Room name</string>
    <string name="create_room_create_button_text">Create room</string>
    <string name="create_room_description_text_field">Description</string>
    <string name="private_switch_text">Private</string>
    <string name="room_theme_text">Theme</string>
    <string name="accept">accept</string>
    <string name="decline">decline</string>

    <string name="offline">Offline - </string>
    <string name="online">Online - </string>
    <string name="fragment_members_title">MEMBERS</string>
    <string name="fragment_friends_title">FRIENDS</string>
    <string name="user_name">User Name</string>
    <string name="user_description">Description profile tatatata</string>
    <string name="button_friends">Friends</string>
    <string name="button_rooms">Subscribed rooms</string>
    <string name="profile_settings">Settings</string>
    <string name="fragment_profile_title">PROFILE</string>


    <string-array name="hints_for_theme">
        <item>Math</item>
        <item>Art</item>
        <item>Biology</item>
        <item>Geography</item>
        <item>Chemistry</item>
    </string-array>
    <!-- Menu -->
    <string name="nav_header_user_name">User name</string>
    <string name="nav_room_list">Rooms</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_logout">Logout</string>
    <string name="nav_open_drawer">Open navigation drawer</string>
    <string name="nav_close_drawer">Close navigation drawer</string>
    <string name="add_user_btn">ADD USER</string>
    <string name="chat_button">Chat</string>
    <string name="join_btn">JOIN</string>
    <string name="zero">0</string>
    <string name="auth_text_login">Login</string>
    <string name="auth_text_sign_up">Sign Up</string>
    <string name="fragment_login_hint_email">Email</string>
    <string name="fragment_login_hint_password">Password</string>
    <string name="login_forget_password">Forget password</string>
    <string name="fragment_sign_up_hint_confirm_password">Confirm Password</string>
    <string name="fragment_register_title">Log In</string>
</resources>