<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/sign_up_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingVertical="10dp"
            android:paddingStart="20dp"
            android:hint="@string/fragment_login_hint_email"
            app:layout_constraintWidth_percent=".8"
            app:layout_constraintVertical_bias=".3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@drawable/register_activity_edit_text_style" />

    <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/sign_up_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingVertical="10dp"
            android:paddingStart="20dp"
            android:layout_marginTop="20dp"
            android:hint="@string/fragment_login_hint_password"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintWidth_percent=".8"
            app:layout_constraintTop_toBottomOf="@id/sign_up_email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@drawable/register_activity_edit_text_style"/>


    <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/sign_up_confirm_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/register_activity_edit_text_style"
            android:hint="@string/fragment_sign_up_hint_confirm_password"
            android:paddingStart="20dp"
            android:paddingVertical="10dp"
            android:layout_marginTop="20dp"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintWidth_percent=".8"
            app:layout_constraintTop_toBottomOf="@id/sign_up_password"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/sign_up_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/sign_up_confirm_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintWidth_percent=".8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="1"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/register_activity_btn_shape"
            android:text="@string/auth_text_sign_up"
            android:textSize="16sp"
            android:textStyle="bold"/>

</androidx.constraintlayout.widget.ConstraintLayout>