<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_marginStart="@dimen/element_small_margin"
        android:layout_marginEnd="@dimen/element_small_margin"
        android:layout_marginBottom="@dimen/element_margin"
        app:cardCornerRadius="@dimen/corner_radius_small_field"

        app:cardPreventCornerOverlap="true"
        android:gravity="center">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/text_margin"
            android:background="@color/message_background"
            android:orientation="horizontal">

        <ImageView
                android:id="@+id/item_image"
                android:layout_width="@dimen/image_size"
                android:layout_height="@dimen/image_size"
                android:src="@mipmap/ic_launcher"
                android:background="@drawable/bg_round_image" />

        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_weight="@integer/material_motion_duration_long_2"
                android:layout_marginEnd="@dimen/text_margin"
                android:layout_marginStart="@dimen/text_margin">

            <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/room_title"
                    android:textColor="@color/message_text_color"
                    android:textAppearance="?attr/textAppearanceListItem" />

            <TextView
                    android:id="@+id/description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="2"
                    android:ellipsize="end"
                    android:text="@string/room_description"
                    android:textColor="@color/message_text_color"
                    android:textAppearance="?attr/textAppearanceListItemSecondary" />
        </LinearLayout>

        <TextView
                android:id="@+id/theme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/room_theme"
                android:textColor="@color/message_text_color"
                android:textAppearance="?attr/textAppearanceListItemSecondary" />
    </LinearLayout>
</androidx.cardview.widget.CardView>