<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".CreateRoomFragment">

    <com.google.android.material.button.MaterialButton
            android:id="@+id/add_photo_button"
            android:layout_width="140dp"
            android:layout_height="150dp"
            android:layout_marginTop="80dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:cornerRadius="150dp"
            app:icon="@drawable/outline_add_a_photo_black_48"
            app:iconGravity="textTop"
            android:gravity="center"
            app:iconSize="64dp"/>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/room_name_text_field"
            android:layout_width="250dp"
            android:layout_height="60dp"
            app:layout_constraintStart_toStartOf="@id/add_photo_button"
            app:layout_constraintTop_toBottomOf="@id/add_photo_button"
            app:layout_constraintEnd_toEndOf="@id/add_photo_button"
            app:layout_constraintBottom_toTopOf="@id/room_theme_text_field"
            android:layout_marginTop="20dp"
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxCornerRadiusTopEnd="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            app:boxCornerRadiusTopStart="20dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/create_room_room_name_text_field_hint">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/room_theme_text_field"
            android:layout_width="250dp"
            android:layout_height="60dp"
            app:layout_constraintStart_toStartOf="@id/room_name_text_field"
            app:layout_constraintTop_toBottomOf="@id/room_name_text_field"
            app:layout_constraintEnd_toEndOf="@id/room_name_text_field"
            app:layout_constraintBottom_toTopOf="@id/room_description_text_field"
            android:layout_marginTop="5dp"
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxCornerRadiusTopEnd="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            app:boxCornerRadiusTopStart="20dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <AutoCompleteTextView
                android:id="@+id/menuAutocomplete"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/room_theme_text"
                android:gravity="center"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/room_description_text_field"
            android:layout_width="250dp"
            android:layout_height="100dp"
            app:layout_constraintStart_toStartOf="@id/room_theme_text_field"
            app:layout_constraintTop_toBottomOf="@id/room_theme_text_field"
            app:layout_constraintEnd_toEndOf="@id/room_theme_text_field"
            app:layout_constraintBottom_toTopOf="@id/private_switch"
            android:layout_marginTop="5dp"
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxCornerRadiusTopEnd="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            app:boxCornerRadiusTopStart="20dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/create_room_description_text_field">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/private_switch"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:layout_constraintStart_toStartOf="@id/room_description_text_field"
            app:layout_constraintEnd_toEndOf="@id/room_description_text_field"
            app:layout_constraintTop_toBottomOf="@id/room_description_text_field"
            app:layout_constraintBottom_toTopOf="@id/create_button"
            android:text="@string/private_switch_text"/>

    <com.google.android.material.button.MaterialButton
            android:id="@+id/create_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@id/private_switch"
            app:layout_constraintStart_toStartOf="@id/private_switch"
            app:layout_constraintEnd_toEndOf="@id/private_switch"
            app:layout_constraintBottom_toBottomOf="parent"
            app:cornerRadius="20dp"
            android:text="@string/create_room_create_button_text"/>

</androidx.constraintlayout.widget.ConstraintLayout>