<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".present.fragments.SearchFragment">

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/room_name_text_field"
            android:layout_width="250dp"
            android:layout_height="60dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/room_theme_text_field"
            android:layout_margin="@dimen/element_margin"
            app:boxCornerRadiusBottomEnd="@dimen/corner_radius_text_field"
            app:boxCornerRadiusTopEnd="@dimen/corner_radius_text_field"
            app:boxCornerRadiusBottomStart="@dimen/corner_radius_text_field"
            app:boxCornerRadiusTopStart="@dimen/corner_radius_text_field"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/create_room_room_name_text_field_hint">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/room_theme_text_field"
            android:layout_width="250dp"
            android:layout_height="60dp"
            app:layout_constraintStart_toStartOf="@id/room_name_text_field"
            app:layout_constraintTop_toBottomOf="@id/room_name_text_field"
            app:layout_constraintEnd_toEndOf="@id/room_name_text_field"
            android:layout_margin="@dimen/element_margin"
            android:layout_marginTop="@dimen/margin_top_text_field"
            app:boxCornerRadiusBottomEnd="@dimen/corner_radius_text_field"
            app:boxCornerRadiusTopEnd="@dimen/corner_radius_text_field"
            app:boxCornerRadiusBottomStart="@dimen/corner_radius_text_field"
            app:boxCornerRadiusTopStart="@dimen/corner_radius_text_field"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <AutoCompleteTextView
                android:id="@+id/menuAutocomplete"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/room_theme_text"
                android:gravity="center"/>
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/filter_list"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="4"
            tools:listitem="@layout/filter_layout"
            android:layout_marginTop="@dimen/element_margin"
            android:layout_marginStart="@dimen/element_margin"
            android:layout_marginEnd="@dimen/element_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/element_margin"
            app:layout_constraintTop_toBottomOf="@id/room_theme_text_field"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

    <com.google.android.material.button.MaterialButton
            android:id="@+id/accept_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/element_margin"
            android:layout_marginTop="@dimen/margin_top_text_field"
            app:layout_constraintTop_toBottomOf="@id/filter_list"
            app:layout_constraintEnd_toEndOf="@id/filter_list"
            app:layout_constraintBottom_toBottomOf="parent"
            app:cornerRadius="@dimen/corner_radius_text_field"
            android:text="@string/accept" />

    <com.google.android.material.button.MaterialButton
            android:id="@+id/decline_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/element_margin"
            android:layout_marginTop="@dimen/margin_top_text_field"
            app:layout_constraintTop_toBottomOf="@id/filter_list"
            app:layout_constraintStart_toStartOf="@id/filter_list"
            app:layout_constraintBottom_toBottomOf="parent"
            app:cornerRadius="@dimen/corner_radius_text_field"
            android:text="@string/decline" />

</androidx.constraintlayout.widget.ConstraintLayout>