<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/main_background"
        tools:context="com.studywithme.app.present.fragments.UserProfileFragment">

    <TextView
            android:id="@+id/profile_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/profile_photo_card"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginBottom="@dimen/text_margin"
            android:text="@string/user_name"
            android:textColor="@color/message_text_color"
            style="@style/TextAppearance.AppCompat.Headline" />

    <androidx.cardview.widget.CardView
            android:id="@+id/profile_photo_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/corner_radius_text_field"
            app:cardElevation="@dimen/element_small_margin"
            app:layout_constraintBottom_toTopOf="@id/profile_description_card"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginBottom="@dimen/text_margin"
            android:layout_marginStart="@dimen/element_margin"
            android:layout_marginEnd="@dimen/text_margin"
            style="@style/CardView.Light">
    <ImageView
            android:id="@+id/profile_photo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/profile_description_card"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_width="@dimen/image_profile_size"
            android:layout_height="@dimen/image_profile_size"
            android:src="@drawable/outline_add_a_photo_black_48"
            android:background="@drawable/bg_round_image"
            android:scaleType="centerCrop" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
            android:id="@+id/profile_description_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/corner_radius_text_field"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="@dimen/text_margin"
            android:layout_marginStart="@dimen/element_margin"
            android:layout_marginEnd="@dimen/text_margin"
            app:cardElevation="@dimen/element_small_margin"
            style="@style/CardView.Light">

        <TextView
                android:id="@+id/profile_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:text="@string/user_description"
                android:padding="@dimen/text_margin"
                android:background="@color/message_background"
                android:textColor="@color/message_text_color"
                style="@style/TextAppearance.AppCompat.Body1" />
    </androidx.cardview.widget.CardView>

    <com.google.android.material.button.MaterialButton
            android:id="@+id/button_rooms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_margin"
            app:layout_constraintTop_toBottomOf="@id/profile_description_card"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:cornerRadius="@dimen/corner_radius_text_field"
            android:textColor="@color/message_text_color"
            android:text="@string/button_rooms"/>

    <com.google.android.material.button.MaterialButton
            android:id="@+id/button_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:clickable="false"
            android:layout_marginTop="@dimen/text_margin"
            app:layout_constraintTop_toBottomOf="@id/button_rooms"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:cornerRadius="@dimen/corner_radius_text_field"
            android:text="@string/nav_settings"/>

    <ProgressBar
            android:id="@+id/loading_progress"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="top|end"
            android:layout_margin="18dp"
            android:elevation="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />
</androidx.constraintlayout.widget.ConstraintLayout>